@@ -28,7 +28,6 @@ package org.anchoranalysis.plugin.image.bean.object.segment.reduce;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
@@ -104,8 +103,7 @@ public class ThresholdConfidence extends ReduceElements<ObjectMask> {
         // Filter
         List<LabelledWithConfidence<ObjectMask>> elementsFiltered =
                 elements.stream()
-                        .filter(withConfidence -> withConfidence.getConfidence() >= minConfidence)
-                        .collect(Collectors.toList());
+                        .filter(withConfidence -> withConfidence.getConfidence() >= minConfidence).toList();
 
         if (elementsFiltered.isEmpty()) {
             // An empty input list produces an outcome where no elements are retained (because none
